welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: value avance is not a member of Unit
while( ! estSurBiscuit()) {droite() avance ();}
                                    ^